frontend/tests/cases/negative/polyCoeffectTypeUnification.gr
poly : forall {a : Type, k : Coeffect, c : k} . a [ (1 + 1) * c ] -> (a × a) [c]
poly [x] = [(x, x)]
